# SQL-Query-Builder-OpenEnv-Environment

./: .gitignore  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  database.py  grader.py  requirements.txt  sql_query_env_environment.py  tasks.py
